# langchain-ollama-playground

./: README.md  main.py  pyproject.toml
src/: basics.py  schemas.py
src/integrations/RAG/: README.md
src/integrations/cerebras/: README.md  main.py
src/integrations/groq/: README.md  main.py
src/integrations/huggingface/: README.md  main.py
src/integrations/ollama/: README.md  llm.py  main.py  model.py
src/integrations/ollama/chat/: invocation.py  multimodal.py  reasoning.py  tool_calling.py
src/integrations/openrouter/: README.md  main.py
src/langchain/: README.md  advanced_agent.py  basic_agent.py  main.py  memory.py  short_term_memory.py  streaming.py
src/schemas/: get_weather.py
src/tools/: get_weather.py
